--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,7 +4,7 @@
 
 https://openslides.org/
 
-Version 2.1 (unreleased)
+Version 2.1 (Agora private pre-release)
 ========================
 [https://github.com/OpenSlides/OpenSlides/milestones/2.1]
 
